# pyrime

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  meson.build  pyproject.toml  shell.nix
.github/workflows/: main.yml
debian/: control
docs/api/: ime.md  nvim.md  prompt-toolkit.md  ptpython.md
src/pyrime/: _C.pyi  __init__.py  __main__.py  api.pyi  dirs.py  draw_ui.py  ime.py  key.py  keys.py  meson.build  rime.py  session.py  terminfo.py  ui.py  utils.py
src/pyrime/ime/: __init__.py  key.py
src/pyrime/ime/ui/: __init__.py  horizontal.py  vertical.py
src/pyrime/nvim/: __init__.py  keymap.py  rime.py  win.py
src/pyrime/prompt_toolkit/: rime.py
src/pyrime/prompt_toolkit/plugins/: viemacs.py
src/pyrime/ptpython/: __init__.py  formatted_text.py  gdb.py  ime.py  keymap.py  layout.py  rime.py
src/pyrime/ptpython/bindings/: __init__.py  autocorrect.py  autoinsert.py  autopair.py  autosuggestion.py  extra.py  rime.py  smartinput.py  viemacs.py
src/pyrime/ptpython/plugins/: __init__.py  autopair.py  autosuggestion.py  smartinput.py  viemacs.py
src/pyrime/ptpython/utils/: ansi.py  insert.py
tests/: test_key.py  test_terminfo.py  test_ui.py
