[build-system]
# https://github.com/elijahr/python-autopxd2/issues/60
requires = ['meson-python', 'cython', 'autopxd2 != 3.0.0']
build-backend = 'mesonpy'

[project]
name = "pyrime"
dynamic = ["version"]
description = "rime for python, attached to prompt-toolkit keybindings for some prompt-toolkit applications such as ptpython"
readme = "README.md"
# Self
requires-python = ">= 3.11"
keywords = ["rime", "ptpython", "prompt-toolkit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# change wcwidth to pyime after pyime is standalone
dependencies = ["platformdirs", "wcwidth"]

[project.optional-dependencies]
cli = ["getch"]
color = ["colorama"]
dev = ["pytest-cov", "prompt-toolkit"]
prompt-toolkit = ["prompt-toolkit"]
ptpython = ["ptpython"]
nvim = ["pynvim"]

[[project.authors]]
name = "Wu, Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://pyrime.readthedocs.io"
Download = "https://github.com/rimeinn/pyrime/releases"
"Bug Report" = "https://github.com/rimeinn/pyrime/issues"
Source = "https://github.com/rimeinn/pyrime"

[tool.mdformat]
number = true

[tool.codespell]
ignore-words-list = "rime, rightt, controle"

[tool.doq]
template_path = "templates"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.cibuildwheel]
archs = ["all"]
# https://github.com/mesonbuild/meson-python/discussions/751
# meson doesn't support universal2
# ERROR: Dependency lookup for rime with method 'pkgconfig' failed: Pkg-config for machine host machine not found. Giving up.
# Almalinux 8's librime 1.3 is too old
# cp314t-macosx-*:
# /bin/sh: pip: command not found
skip = "*37-* *38-* *39-* *310-* cp314t-macosx_* *_universal2 *-macosx_x86_64 *-win* *-manylinux_*"
build-frontend = "build[uv]"
before-test = "pip install .[dev]"
test-command = "pytest {project}"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"

[tool.cibuildwheel.environment]
MACOSX_DEPLOYMENT_TARGET = "15.0"

[[tool.cibuildwheel.overrides]]
select = ["*-manylinux_*"]
before-all = "yum -y install librime-devel"

[[tool.cibuildwheel.overrides]]
select = ["*-manylinux_armv7l"]
before-all = "apt-get -y install librime-dev"

[[tool.cibuildwheel.overrides]]
select = ["*-musllinux_*"]
before-all = "apk add librime-dev"

[[tool.cibuildwheel.overrides]]
select = ["*-macosx_*"]
# AssertionError: uv not found
before-all = "brew install librime uv"

# https://github.com/astral-sh/uv/issues/10260
[[tool.cibuildwheel.overrides]]
select = ["*-musllinux_s390x", "*-musllinux_ppc64*", "*-musllinux_riscv64"]
build-frontend = "build"
